syntax="proto3";

// contract
message ContractBodyContent {
    bytes data = 1;
}

// device
message DeviceBodyContent {
    repeated bytes endpoints = 1;
    repeated bytes sn_list = 2;
    repeated bytes passive_pn_list = 3;
    optional string name = 4;
    optional uint32 bdt_version = 5;
}

// dir
message DirBodyContent {
    enum Type {
        Chunk = 0;
        ObjList = 1;
    }
    Type type = 1;
    optional bytes chunk_id = 2;

    // 使用list编码hash_map
    message ObjItem {
        bytes obj_id = 1;
        bytes value = 2;
    }
    repeated ObjItem obj_list = 3;
}

// file
message ChunkList {
    enum Type {
        ChunkInList = 0;
        ChunkInFile = 1;
        ChunkInBundle = 2;
    }
    enum HashMethod {
        Serial = 0;
    }

    Type type = 1;
    repeated bytes chunk_id_list = 2;
    bytes file_id = 3;
    optional HashMethod hash_method = 4;
}

message FileBodyContent {
    ChunkList chunk_list = 1;
}

// people
message PeopleBodyContent {
    repeated bytes ood_list = 1;
    optional string name = 2;
    optional bytes icon = 3;
    optional string ood_work_mode = 4;
}

message GroupMember {
    bytes id = 1;
    string title = 2;
    string role = 3; // for acl
    uint64 shares = 4;
}

message GroupMethodACL {
    string name = 1;

    // target
    optional bytes target_dec_id = 2;
    optional string r_path = 3;

    double min_support_percent = 4;
    string permissions = 5; // ACL-String
}

message GroupRoleACL {
    string name = 1;

    // target
    optional bytes target_dec_id = 2;
    optional string r_path = 3;

    string method = 4;
    double right_percent = 5;
    bool is_operator = 6;
    string permissions = 7; // ACL-String
}

// simple_group
message SimpleGroupDescContent {
    repeated GroupMember admins = 1;
    uint32 conclusion_limit = 2; // the admins can make any conclusion with the signatures more than ${conclusion_limit}
}

message SimpleGroupBodyContent {
    repeated bytes members = 1;

    uint64 total_equity = 3;

    // acl
    repeated GroupMethodACL methods = 5;
    repeated GroupRoleACL roles = 6;

    repeated bytes ood_list = 7;

    optional uint64 history_block_max = 8;
    optional uint64 history_block_lifespan = 9;
}

// org
message OrgBodyContent {
    repeated GroupMember admins = 1;
    repeated GroupMember members = 2;

    uint64 total_equity = 3;
    
    optional bytes token_contract = 4;

    // acl
    repeated GroupMethodACL methods = 5;
    repeated GroupRoleACL roles = 6;

    repeated bytes ood_list = 7;

    optional uint64 history_block_max = 8;
    optional uint64 history_block_lifespan = 9;
}

message GroupPackedBodyContent {
    bytes packed_body_id = 1;
}

// tx
message TxBodyContent {
    bytes data = 1;
}

// proof_of_service
message ProofData {
    bytes data = 1;
}

message ProofOfServiceBodyContent {
    ProofData data = 1;
}